
2009-Mar-21 Struan Robertson

  * src/AssociationReaction.cpp: Added code relating to contracted basis set method.

2009-03-14 Chris Morley
  
  * src/Persistence.h: make PersistPtr work with NULL content.
    (Previously only partially implemented.)
  * src/XMLPersist.cpp, src/XMLPersist.h: Move loading of defaults.xml until
  it is used, so that a fully formed XML file doesn't need it. Make more robust
  to missing defaults.xml and librarymols.xml.

_2009_03_13__11_48_50_ Chi-Hsiu Liang

  * Updated manual for reservoir state method
  * Added a QA for reservoir state method; about additional 1 minute will add to the QA test. 
    In these moderately high temperatures, 800K and 1000K, for the cyclopropene isomerization system,
    the approximation is not perfect and also the computational gaining is only about three times.
    From the suggestion of Dave, we are thinking about implementing a new species profile method
    that takes the values from the Bartis-Windom matrix, which could possibly save some additional time.

_2009_03_10__16_52_59_ Chi-Hsiu Liang

  * Corrected the Bartis-Widom rate code for irreversible terms.

_2009_03_10__12_40_45_ Chi-Hsiu Liang

  * Tidy up some unused code.

_2009_03_10__11_07_28_ Chi-Hsiu Liang

  * Corrected the lowest barrier calculation for wells.

2009-Mar-08 Struan Robertson

  * src/IsomeriationReaction.cpp: Added code relating to contracted basis set method.

2009-03-08 Chris Morley
  * src/main.cpp: Make overwriting the input file more difficult, needs an option:
     mesmer infile -o outfile      to outfile
     mesmer infile -n              to infile
     mesmer infile                 to "mesmer_out.xml"
    Copies of all overwritten files are saved with a _prev suffix.
  
  * Support for specifying multiple input files on the commandline.
    The first is normal and the molecules reactions etc from the subsequent
    ones are inserted into it in an intelligent way before use.